       (changes since jEdit 4.4)
:encoding=UTF-8:

{{{ Version 4.5pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Alan Ezust, cy6erGn0m,
Bad Sector, jclopes, Dale Anson, Anshal Shukla, Ryan Mott, Damien Radtke,
Matthew Gilbert, Dennis Hotson, Kevin Hunter, encorejane, nherzing,
Evan Wright Shlomy Reinstein and Marcelo Vanzin for contributing to this
release.

{{{ Bug fixes
- Latex string literal fixed : when starting with `` the String literal can
  now end with " or '' (#3152515 - patch #3162735 Evan Wright)

- When jEdit is unable to autosave jEdit now logs a warning, but doesn't
  pop an error dialog every 30 seconds (#3154842 - Matthieu Casanova)

- Collapsing all folds will move the caret outside any fold if necessary
  (Matthieu Casanova)

- When macros are reloaded, if one of them was overriding a built-in action,
  the action is not restored if the overriding macro is removed
  (#3110689 - Matthieu Casanova)

- Shortcuts option pane was showing shortcuts twice when an action was
  overridden by a macro or a plugin (Matthieu Casanova)

- Made jedit.exe to find JDK, so that jEdit runs only with JDK (without
  JRE) like 4.3.x and before. (SF.net bug #3134149 - Kazutoshi Satoda)

- Got rid of extra Component created as parent of every JToolBar in
  GuiUtilities.loadToolBar() (#2114751-Alan Ezust)

- Fix for tracker 3134215, restore previously opened files setting not being
  considered when restoring split configuration. (#3134215 - Dale Anson)

- After using save-as action on a read-only buffer the new buffer is no longer
  read-only (#3148102 - Matthieu Casanova)

- Applied patch from Ryan Mott that fixes textarea scrolling left
  automatically when selecting text at the end of a long line and trying to
  scroll down if next lines are shorter. (#2841162, Matthieu Casanova)

- Applied suggestion from bug 3160310 to correctly set permissions on
  symlinked files (Marcelo Vanzin)
